--- a/index.html
+++ b/index.html
@@ -6,22 +6,32 @@
     <title>Simple Text Editor</title>
     <link rel="stylesheet" href="style.css">
     <!-- font awesome cdn -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
     <section class="mx-auto w-[90%] mt-2 bg-blue-400 h-[600px]">
           <h1 class="text-3xl italic font-bold text-center py-5">My Text Editor</h1>
           <div class="w-[80%] mx-auto border-solid border-2 border-black bg-blue-200 h-[500px] ">
-        <div>
-             <div>
-                <i class="fa-solid fa-bold"></i>
-               
+        <div id="nav-bar" class="w-[95%] mx-auto flex justify-between py-5">
+             <div class="grid grid-cols-3 gap-5">
+                <button><i class="fa-solid fa-bold"></i></button>
+                <button><i class="fa-solid fa-italic"></i></button>
+                <button><i class="fa-solid fa-underline"></i></button>                
             </div>
-            <div>
-
+            <div class="grid grid-cols-4 gap-5">
+                <button><i class="fa-solid fa-align-left"></i></button>
+                <button><i class="fa-solid fa-align-center"></i></button>
+                <button><i class="fa-solid fa-align-right"></i></button>
+                <button><i class="fa-solid fa-align-justify"></i></button>
+            </div>
+            <div class="grid grid-cols-3 gap-3">
+                <button>Hello</button>
+                <button class="text-xl font-bold">aA</button>
+                <button><input type="color" id="colorPicker" name="colorPicker"></button>
             </div>
         </div>
-            <textarea  class="w-[95%] h-[400px] mx-auto flex justify-center mt-20"name="" id="" ></textarea>
+            <textarea  class="w-[95%] h-[400px] mx-auto flex justify-center "name="" id="" ></textarea>
 
             </div>
           </div>
