--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
           <div class="w-[80%] mx-auto border-solid border-2 border-black bg-blue-200 h-[500px] ">
         <div id="nav-bar" class="w-[95%] mx-auto flex justify-between py-5">
              <div class="grid grid-cols-3 gap-5">
-                <button><i class="fa-solid fa-bold"></i></button>
-                <button><i class="fa-solid fa-italic"></i></button>
-                <button><i class="fa-solid fa-underline"></i></button>                
+                <button id="bold-btn" class="bold"><i class="fa-solid fa-bold"></i></button>
+                <button id="italic-btn" class="italic"><i class="fa-solid fa-italic"></i></button>
+                <button id="underline-btn" class="underline"><i class="fa-solid fa-underline"></i></button>                
             </div>
             <div class="grid grid-cols-4 gap-5">
-                <button><i class="fa-solid fa-align-left"></i></button>
-                <button><i class="fa-solid fa-align-center"></i></button>
-                <button><i class="fa-solid fa-align-right"></i></button>
-                <button><i class="fa-solid fa-align-justify"></i></button>
+                <button id="left-btn"><i class="fa-solid fa-align-left"></i></button>
+                <button id="center-btn"><i class="fa-solid fa-align-center"></i></button>
+                <button id="right-btn"><i class="fa-solid fa-align-right"></i></button>
+                <button id="justify-btn"><i class="fa-solid fa-align-justify"></i></button>
             </div>
-            <div class="grid grid-cols-3 gap-3">
-                <button>Hello</button>
+            <div class=" grid grid-cols-3 gap-2">
+                <input id="fontsize-input"class="w-10"type="number" name="" id="">
                 <button class="text-xl font-bold">aA</button>
-                <button><input type="color" id="colorPicker" name="colorPicker"></button>
+                <input type="color" id="colorPicker" name="colorPicker">
             </div>
         </div>
-            <textarea  class="w-[95%] h-[400px] mx-auto flex justify-center "name="" id="" ></textarea>
+            <textarea  id="text-area" class="w-[95%] h-[400px] mx-auto flex justify-center text-4xl "name="" id="" ></textarea>
 
             </div>
           </div>
