--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 <button id="underline-btn" class="underline"><i class="fa-solid fa-underline"></i></button>                
             </div>
             <div class="grid grid-cols-4 gap-5">
-                <button id="left-btn"><i class="fa-solid fa-align-left"></i></button>
-                <button id="center-btn"><i class="fa-solid fa-align-center"></i></button>
-                <button id="right-btn"><i class="fa-solid fa-align-right"></i></button>
-                <button id="justify-btn"><i class="fa-solid fa-align-justify"></i></button>
+                <button id="left-btn"class="left"><i class="fa-solid fa-align-left"></i></button>
+                <button id="center-btn"class="center"><i class="fa-solid fa-align-center"></i></button>
+                <button id="right-btn"class="right"><i class="fa-solid fa-align-right"></i></button>
+                <button id="justify-btn"class="justify"><i class="fa-solid fa-align-justify"></i></button>
             </div>
             <div class=" grid grid-cols-3 gap-2">
                 <input id="fontsize-input"class="w-10"type="number" name="" id="">
@@ -31,7 +31,7 @@
                 <input type="color" id="colorPicker" name="colorPicker">
             </div>
         </div>
-            <textarea  id="text-area" class="w-[95%] h-[400px] mx-auto flex justify-center text-4xl "name="" id="" ></textarea>
+            <textarea  id="text-area" class="w-[95%] h-[400px] mx-auto flex justify-center text-2xl "name="" id="" ></textarea>
 
             </div>
           </div>
