--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
                 <button id="justify-btn"class="justify"><i class="fa-solid fa-align-justify"></i></button>
             </div>
             <div class=" grid grid-cols-3 gap-2">
-                <input id="fontsize-input"class="w-10"type="number" name="" id="">
+                <input id="font-size-input"class="w-10"type="number" name="" id="" min="1" max="100" value="16">
                 <button class="text-xl font-bold">aA</button>
                 <input type="color" id="colorPicker" name="colorPicker">
             </div>
         </div>
-            <textarea  id="text-area" class="w-[95%] h-[400px] mx-auto flex justify-center text-2xl "name="" id="" ></textarea>
+            <textarea  id="text-area" class="w-[95%] h-[400px] mx-auto flex justify-center "name="" id="" ></textarea>
 
             </div>
           </div>
