--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class=" grid grid-cols-3 gap-2">
                 <input id="font-size-input"class="w-10"type="number" name="" id="" min="1" max="100" value="16">
                 <button class="text-xl font-bold">aA</button>
-                <input type="color" id="colorPicker" name="colorPicker">
+                <input type="color" id="color-picker" name="colorPicker">
             </div>
         </div>
             <textarea  id="text-area" class="w-[95%] h-[400px] mx-auto flex justify-center "name="" id="" ></textarea>
