I have complited my text editor

--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
                 <button id="justify-btn"class="justify"><i class="fa-solid fa-align-justify"></i></button>
             </div>
             <div class=" grid grid-cols-3 gap-2">
-                <input id="font-size-input"class="w-10"type="number" name="" id="" min="1" max="100" value="16">
-                <button class="text-xl font-bold">aA</button>
+                <input id="font-size-input"class="w-10 rounded-lg"type="number" name="" id="" min="1" max="100" value="16">
+                <div class="flex justify-center">
+                <button id="lower-case-btn"class="text-xl font-bold">a</button>
+                <button id="upper-case-btn" class="text-xl font-bold">A</button>
+                </div>
                 <input type="color" id="color-picker" name="colorPicker">
             </div>
         </div>
